--- a/opencommercesearch-common/pom.xml
+++ b/opencommercesearch-common/pom.xml
@@ -4,10 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.opencommercesearch</groupId>
+    <parent>
+        <groupId>org.opencommercesearch</groupId>
+        <artifactId>all</artifactId>
+        <version>0.2-SNAPSHOT</version>
+    </parent>
+  
     <artifactId>opencommercesearch-common</artifactId>
     <packaging>jar</packaging>
-    <version>0.2-SNAPSHOT</version>
     <inceptionYear>2012</inceptionYear>
     <licenses>
         <license>
@@ -17,51 +21,28 @@
         </license>
     </licenses>
 
-    <properties>
-        <solr.version>4.2.1</solr.version>
-        <atg.version>10.0.1</atg.version>
-        <junit.version>4.11</junit.version>
-        <mockito.version>1.9.0</mockito.version>
-        <powermock.version>1.5</powermock.version>
-        <harmcrest.version>1.3</harmcrest.version>
-        <opencommercesearch.version>0.2-SNAPSHOT</opencommercesearch.version>
-        <jacoco.version>0.6.0.201210061924</jacoco.version>
-        <commons.codecs>1.7</commons.codecs>
-        <lucene.synonyms>1.2.2-solr-4.1.0</lucene.synonyms>
-    </properties>
-
-    <scm>
-        <connection>scm:git:git@github.com:rmerizalde/ecommercesearch.git</connection>
-        <developerConnection>scm:git:git@github.com:rmerizalde/ecommercesearch.git</developerConnection>
-        <url>http://github.com/rmerizalde/ecommercesearch</url>
-    </scm>
-
     <dependencies>
+    
       <!-- Solr -->
       <dependency>
           <groupId>org.apache.solr</groupId>
           <artifactId>solr-solrj</artifactId>
-          <version>${solr.version}</version>
       </dependency>
 
       <dependency>
           <groupId>org.apache.solr</groupId>
           <artifactId>solr-test-framework</artifactId>
-          <version>${solr.version}</version>
       </dependency>
 
       <dependency>
           <groupId>commons-codec</groupId>
           <artifactId>commons-codec</artifactId>
-          <version>${commons.codecs}</version>
       </dependency>
-      
       
       <!-- ATG Dynamo Application Server -->
       <dependency>
           <groupId>atg</groupId>
           <artifactId>das</artifactId>
-          <version>${atg.version}</version>
           <scope>system</scope>
           <systemPath>${env.ATG_HOME}/DAS/lib/classes.jar</systemPath>
       </dependency>
@@ -70,7 +51,6 @@
       <dependency>
           <groupId>atg</groupId>
           <artifactId>dcs</artifactId>
-          <version>${atg.version}</version>
           <scope>system</scope>
           <systemPath>${env.ATG_HOME}/DCS/lib/classes.jar</systemPath>
       </dependency>
@@ -79,7 +59,6 @@
       <dependency>
           <groupId>atg</groupId>
           <artifactId>epub</artifactId>
-          <version>${atg.version}</version>
           <scope>system</scope>
           <systemPath>${env.ATG_HOME}/Publishing/base/lib/classes.jar</systemPath>
       </dependency>
@@ -87,13 +66,11 @@
       <dependency>
         <groupId>org.opencommercesearch</groupId>
         <artifactId>opencommercesearch-solr</artifactId>
-        <version>${opencommercesearch.version}</version>
       </dependency>
 
       <dependency>
       	<groupId>org.healthonnet.lucene</groupId>
       	<artifactId>hon-lucene-synonyms</artifactId>
-      	<version>${lucene.synonyms}</version>
         <scope>system</scope>
         <systemPath>${basedir}/lib/hon-lucene-synonyms-${lucene.synonyms}.jar</systemPath>
       </dependency>
@@ -102,7 +79,6 @@
       <dependency>
         <groupId>commons-lang</groupId>
         <artifactId>commons-lang</artifactId>
-        <version>2.6</version>
         <scope>provided</scope>
       </dependency>
 
@@ -110,61 +86,58 @@
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>${junit.version}</version>
         <scope>test</scope>
       </dependency>
 
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
-        <version>${mockito.version}</version>
         <scope>test</scope>
       </dependency>
 
       <dependency>
         <groupId>org.powermock</groupId>
         <artifactId>powermock-module-junit4</artifactId>
-        <version>${powermock.version}</version>
         <scope>test</scope>
       </dependency>
       
       <dependency>
         <groupId>org.powermock</groupId>
         <artifactId>powermock-api-mockito</artifactId>
-        <version>${powermock.version}</version>
         <scope>test</scope>
       </dependency>
 
       <dependency>
         <groupId>org.powermock</groupId>
         <artifactId>powermock-module-junit4-rule</artifactId>
-        <version>${powermock.version}</version>
         <scope>test</scope>
       </dependency>
 
       <dependency>
         <groupId>org.powermock</groupId>
         <artifactId>powermock-classloading-xstream</artifactId>
-        <version>${powermock.version}</version>
         <scope>test</scope>
       </dependency>
 
       <dependency>
         <groupId>org.hamcrest</groupId>
         <artifactId>hamcrest-all</artifactId>
-        <version>${harmcrest.version}</version>
         <scope>test</scope>
       </dependency>
 
       <dependency>
       	<groupId>log4j</groupId>
       	<artifactId>log4j</artifactId>
-      	<version>1.2.17</version>
       	<scope>test</scope>
       </dependency>
+      
     </dependencies>
 
-    <build>
+	<!-- ________________________________________________________________________________________ -->
+
+	<build>
+		<defaultGoal>package</defaultGoal>
+		
         <resources>
             <resource>
                 <directory>${basedir}/src/main/java</directory>
@@ -295,6 +268,8 @@
                 </configuration>
                 <executions>
                     <execution>
+                    	<id>prepare-agent</id>
+                        <phase>post-integration-test</phase>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
@@ -308,6 +283,28 @@
                     </execution>
                 </executions>
             </plugin>
+            
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+					<appendAssemblyId>false</appendAssemblyId>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>            
         </plugins>
+            
     </build>
+    
 </project>
