--- a/opencommercesearch-pub/pom.xml
+++ b/opencommercesearch-pub/pom.xml
@@ -1,174 +1,165 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.opencommercesearch</groupId>
-    <artifactId>opencommercesearch-pub</artifactId>
-    <packaging>jar</packaging>
-    <version>0.2-SNAPSHOT</version>
-    <inceptionYear>2012</inceptionYear>
-    <licenses>
-        <license>
-            <name>The Apache Software License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
+	<parent>
+		<groupId>org.opencommercesearch</groupId>
+		<artifactId>all</artifactId>
+		<version>0.2-SNAPSHOT</version>
+	</parent>
 
-    <properties>
-        <solr.version>4.2.1</solr.version>
-        <atg.version>10.0.1</atg.version>
-        <junit.version>4.10</junit.version>
-        <mockito.version>1.9.0</mockito.version>
-        <powermock.version>1.4.12</powermock.version>
-    </properties>
+	<artifactId>opencommercesearch-pub</artifactId>
+	<packaging>jar</packaging>
+	<inceptionYear>2012</inceptionYear>
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
-    <scm>
-        <connection>scm:git:git@github.com:rmerizalde/ecommercesearch.git</connection>
-        <developerConnection>scm:git:git@github.com:rmerizalde/ecommercesearch.git</developerConnection>
-        <url>http://github.com/rmerizalde/ecommercesearch</url>
-    </scm>
+	<dependencies>
 
-    <dependencies>
-      
-      <!-- ATG Dynamo Application Server -->
-      <dependency>
-          <groupId>atg</groupId>
-          <artifactId>das</artifactId>
-          <version>${atg.version}</version>
-          <scope>system</scope>
-          <systemPath>${env.ATG_HOME}/DAS/lib/classes.jar</systemPath>
-      </dependency>
-      <!-- ATG Dynamo Personalization Server -->
-      <dependency>
-          <groupId>atg</groupId>
-          <artifactId>dps</artifactId>
-          <version>${atg.version}</version>
-          <scope>system</scope>
-          <systemPath>${env.ATG_HOME}/DPS/lib/classes.jar</systemPath>        
-      </dependency>
-      <!-- ATG BCC -->
-      <dependency>
-          <groupId>atg</groupId>
-          <artifactId>bcc</artifactId>
-          <version>${atg.version}</version>
-          <scope>system</scope>
-          <systemPath>${env.ATG_HOME}/BCC/lib/classes.jar</systemPath>
-      </dependency>
-      <!-- ATG WebUI -->
-      <dependency>
-          <groupId>atg</groupId>
-          <artifactId>webui</artifactId>
-          <version>${atg.version}</version>
-          <scope>system</scope>
-          <systemPath>${env.ATG_HOME}/WebUI/lib/classes.jar</systemPath>
-      </dependency>
+		<!-- ATG Dynamo Application Server -->
+		<dependency>
+			<groupId>atg</groupId>
+			<artifactId>das</artifactId>
+			<scope>system</scope>
+			<systemPath>${env.ATG_HOME}/DAS/lib/classes.jar</systemPath>
+		</dependency>
 
-      <!-- provided -->
-      <dependency>
-        <groupId>org.opencommercesearch</groupId>
-        <artifactId>opencommercesearch-common</artifactId>
-        <version>0.2-SNAPSHOT</version>
-      </dependency>
+		<!-- ATG Dynamo Personalization Server -->
+		<dependency>
+			<groupId>atg</groupId>
+			<artifactId>dps</artifactId>
+			<scope>system</scope>
+			<systemPath>${env.ATG_HOME}/DPS/lib/classes.jar</systemPath>
+		</dependency>
 
-      <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>servlet-api</artifactId>
-        <version>2.4</version>
-        <scope>provided</scope>
-      </dependency>
+		<!-- ATG BCC -->
+		<dependency>
+			<groupId>atg</groupId>
+			<artifactId>bcc</artifactId>
+			<scope>system</scope>
+			<systemPath>${env.ATG_HOME}/BCC/lib/classes.jar</systemPath>
+		</dependency>
 
-      <dependency>
-        <groupId>commons-fileupload</groupId>
-        <artifactId>commons-fileupload</artifactId>
-        <version>1.2.2</version>
-        <scope>provided</scope>
-      </dependency>
+		<!-- ATG WebUI -->
+		<dependency>
+			<groupId>atg</groupId>
+			<artifactId>webui</artifactId>
+			<scope>system</scope>
+			<systemPath>${env.ATG_HOME}/WebUI/lib/classes.jar</systemPath>
+		</dependency>
 
-      <dependency>
-        <groupId>commons-lang</groupId>
-        <artifactId>commons-lang</artifactId>
-        <version>2.6</version>
-        <scope>provided</scope>
-      </dependency>
+		<dependency>
+			<groupId>org.healthonnet.lucene</groupId>
+			<artifactId>hon-lucene-synonyms</artifactId>
+			<scope>system</scope>
+			<systemPath>${basedir}/../opencommercesearch-common/lib/hon-lucene-synonyms-${lucene.synonyms}.jar</systemPath>
+		</dependency>
 
-      <!-- Test depedencies -->
-      <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>${junit.version}</version>
-        <scope>test</scope>
-      </dependency>
+		<dependency>
+			<groupId>org.opencommercesearch</groupId>
+			<artifactId>opencommercesearch-common</artifactId>
+		</dependency>
 
-      <dependency>
-        <groupId>org.mockito</groupId>
-        <artifactId>mockito-core</artifactId>
-        <version>${mockito.version}</version>
-        <scope>test</scope>
-      </dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.4</version>
+			<scope>provided</scope>
+		</dependency>
 
-      <dependency>
-        <groupId>org.powermock</groupId>
-        <artifactId>powermock-module-junit4</artifactId>
-        <version>${powermock.version}</version>
-        <scope>test</scope>
-      </dependency>
-      
-      <dependency>
-        <groupId>org.powermock</groupId>
-        <artifactId>powermock-api-mockito</artifactId>
-        <version>${powermock.version}</version>
-        <scope>test</scope>
-      </dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.2.2</version>
+			<scope>provided</scope>
+		</dependency>
 
-    </dependencies>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<scope>provided</scope>
+		</dependency>
 
-    <build>
-        <resources>
-            <resource>
-                <directory>${basedir}/src/main/java</directory>
-            </resource>
-            <resource>
-                <directory>${basedir}/config</directory>
-                <includes>
-                    <include>**/*.xml</include>
-                    <include>**/*.properties</include>
-                </includes>
-            </resource>
-        </resources>
-    
-        <testResources>
-            <testResource>
-                <directory>${basedir}/src/test/java</directory>
-            </testResource>
-        </testResources>
+		<!-- Test depedencies -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
 
-        <plugins>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-surefire-plugin</artifactId>
-              <version>2.12.3</version>
-              <configuration>
-                <parallel>methods</parallel>
-                <threadCount>10</threadCount>
-              </configuration>
-            </plugin>
-          
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.4</version>
-                <configuration>
-                    <includes>
-                        <include>**/*.class</include>
-                        <include>**/*.xml</include>
-                        <include>**/*.properties</include>
-                    </includes>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-    
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-api-mockito</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+	</dependencies>
+
+	<build>
+		<defaultGoal>package</defaultGoal>
+
+		<resources>
+			<resource>
+				<directory>${basedir}/src/main/java</directory>
+			</resource>
+			<resource>
+				<directory>${basedir}/config</directory>
+				<includes>
+					<include>**/*.xml</include>
+					<include>**/*.properties</include>
+				</includes>
+			</resource>
+		</resources>
+
+		<testResources>
+			<testResource>
+				<directory>${basedir}/src/test/java</directory>
+			</testResource>
+		</testResources>
+
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12.3</version>
+				<configuration>
+					<parallel>methods</parallel>
+					<threadCount>10</threadCount>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<includes>
+						<include>**/*.class</include>
+						<include>**/*.xml</include>
+						<include>**/*.properties</include>
+					</includes>
+				</configuration>
+			</plugin>
+		</plugins>
+
+	</build>
+
 </project>
