--- a/opencommercesearch-solr/pom.xml
+++ b/opencommercesearch-solr/pom.xml
@@ -1,137 +1,82 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.opencommercesearch</groupId>
-    <artifactId>opencommercesearch-solr</artifactId>
-    <packaging>jar</packaging>
-    <version>0.2-SNAPSHOT</version>
-    <inceptionYear>2012</inceptionYear>
+	<parent>
+		<groupId>org.opencommercesearch</groupId>
+		<artifactId>all</artifactId>
+		<version>0.2-SNAPSHOT</version>
+	</parent>
 
-    <properties>
-        <solr.version>4.2.1</solr.version>
-        <org.restlet.jee.version>2.1.1</org.restlet.jee.version>
-        <junit.version>4.11</junit.version>
-        <mockito.version>1.9.5</mockito.version>
-        <powermock.version>1.5</powermock.version>
-    </properties>  
+	<artifactId>opencommercesearch-solr</artifactId>
+	<packaging>jar</packaging>
+	<inceptionYear>2012</inceptionYear>
 
-    <scm>
-        <connection>scm:git:git@github.com:rmerizalde/ecommercesearch-solr.git</connection>
-        <developerConnection>scm:git:git@github.com:rmerizalde/ecommercesearch-solr.git</developerConnection>
-        <url>http://github.com/rmerizalde/ecommercesearch</url>
-    </scm>
+	<dependencies>
 
-    <repositories>
-      <repository>
-         <id>maven-restlet</id>
-         <name>Public online Restlet repository</name>
-         <url>http://maven.restlet.org</url>
-      </repository>
-    </repositories>
+		<!-- Solr -->
+		<dependency>
+			<groupId>org.apache.solr</groupId>
+			<artifactId>solr-core</artifactId>
+			<scope>provided</scope>
+		</dependency>
 
-    <dependencies>
-      <!-- Solr -->
-      <dependency>
-	      <groupId>org.apache.solr</groupId>
-	      <artifactId>solr-core</artifactId>
-	      <version>${solr.version}</version>
-        <scope>provided</scope>
-      </dependency>
+		<dependency>
+			<groupId>org.restlet.jee</groupId>
+			<artifactId>org.restlet</artifactId>
+			<version>${org.restlet.jee.version}</version>
+			<scope>provided</scope>
+		</dependency>
 
-      <dependency>
-       <groupId>org.restlet.jee</groupId>
-       <artifactId>org.restlet</artifactId>
-       <version>${org.restlet.jee.version}</version>
-        <scope>provided</scope>
-      </dependency>
+		<dependency>
+			<groupId>org.restlet.jee</groupId>
+			<artifactId>org.restlet.ext.servlet</artifactId>
+			<version>${org.restlet.jee.version}</version>
+			<scope>provided</scope>
+		</dependency>
 
-      <dependency>
-       <groupId>org.restlet.jee</groupId>
-       <artifactId>org.restlet.ext.servlet</artifactId>
-       <version>${org.restlet.jee.version}</version>
-        <scope>provided</scope>
-      </dependency>
+		<!-- Test depedencies -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
 
-      <!-- Test depedencies -->
-      <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>${junit.version}</version>
-        <scope>test</scope>
-      </dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
+		</dependency>
 
-      <dependency>
-        <groupId>org.mockito</groupId>
-        <artifactId>mockito-core</artifactId>
-        <version>${mockito.version}</version>
-        <scope>test</scope>
-      </dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4</artifactId>
+			<scope>test</scope>
+		</dependency>
 
-      <dependency>
-        <groupId>org.powermock</groupId>
-        <artifactId>powermock-module-junit4</artifactId>
-        <version>${powermock.version}</version>
-        <scope>test</scope>
-      </dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-api-mockito</artifactId>
+			<scope>test</scope>
+		</dependency>
 
-      <dependency>
-        <groupId>org.powermock</groupId>
-        <artifactId>powermock-api-mockito</artifactId>
-        <version>${powermock.version}</version>
-        <scope>test</scope>
-      </dependency>
+	</dependencies>
 
-    </dependencies>
+	<build>
+		<defaultGoal>package</defaultGoal>
+	
+		<resources>
+			<resource>
+				<directory>${basedir}/src/main/java</directory>
+			</resource>
+		</resources>
 
-  <build>
-      <resources>
-          <resource>
-              <directory>${basedir}/src/main/java</directory>
-          </resource>
-      </resources>
-
-      <testResources>
-          <testResource>
-            <directory>${basedir}/src/test/java</directory>
-          </testResource>
-      </testResources>
-
-      <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>2.5.1</version>
-
-            <configuration>
-              <source>1.6</source>
-              <target>1.6</target>
-            </configuration>
-          </plugin>
-
-          <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-jar-plugin</artifactId>
-              <version>2.4</version>
-              <configuration>
-                  <includes>
-                      <include>**/*.class</include>
-                  </includes>
-              </configuration>
-          </plugin>
-      </plugins>
-  </build>
-
-    <reporting>
-      <plugins>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>cobertura-maven-plugin</artifactId>
-          <version>2.5.2</version>
-        </plugin>
-      </plugins>
-    </reporting>
-    
+		<testResources>
+			<testResource>
+				<directory>${basedir}/src/test/java</directory>
+			</testResource>
+		</testResources>
+	</build>
+	
 </project>
