--- a/opencommercesearch-common/pom.xml
+++ b/opencommercesearch-common/pom.xml
@@ -1,245 +1,239 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.opencommercesearch</groupId>
-        <artifactId>all</artifactId>
-        <version>0.2-SNAPSHOT</version>
-    </parent>
-  
-    <artifactId>opencommercesearch-common</artifactId>
-    <packaging>jar</packaging>
-    <inceptionYear>2012</inceptionYear>
-    <licenses>
-        <license>
-            <name>The Apache Software License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
+	<parent>
+		<groupId>org.opencommercesearch</groupId>
+		<artifactId>all</artifactId>
+		<version>0.2-SNAPSHOT</version>
+	</parent>
 
-    <dependencies>
-    
-      <!-- Solr -->
-      <dependency>
-          <groupId>org.apache.solr</groupId>
-          <artifactId>solr-solrj</artifactId>
-      </dependency>
+	<artifactId>opencommercesearch-common</artifactId>
+	<packaging>jar</packaging>
+	<inceptionYear>2012</inceptionYear>
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
-      <dependency>
-          <groupId>org.apache.solr</groupId>
-          <artifactId>solr-test-framework</artifactId>
-      </dependency>
+	<dependencies>
 
-      <dependency>
-          <groupId>commons-codec</groupId>
-          <artifactId>commons-codec</artifactId>
-      </dependency>
-      
-      <!-- ATG Dynamo Application Server -->
-      <dependency>
-          <groupId>atg</groupId>
-          <artifactId>das</artifactId>
-      </dependency>
+		<!-- Solr -->
+		<dependency>
+			<groupId>org.apache.solr</groupId>
+			<artifactId>solr-solrj</artifactId>
+		</dependency>
 
-      <!-- ATG Dynamo Commerce Server -->
-      <dependency>
-          <groupId>atg</groupId>
-          <artifactId>dcs</artifactId>
-      </dependency>
+		<dependency>
+			<groupId>org.apache.solr</groupId>
+			<artifactId>solr-test-framework</artifactId>
+		</dependency>
 
-      <!-- ATG Publishing -->
-      <dependency>
-          <groupId>atg</groupId>
-          <artifactId>epub</artifactId>
-      </dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+		</dependency>
 
-      <dependency>
-        <groupId>org.opencommercesearch</groupId>
-        <artifactId>opencommercesearch-solr</artifactId>
-      </dependency>
+		<!-- ATG Dynamo Application Server -->
+		<dependency>
+			<groupId>atg</groupId>
+			<artifactId>das</artifactId>
+		</dependency>
 
-      <dependency>
-      	<groupId>org.healthonnet.lucene</groupId>
-      	<artifactId>hon-lucene-synonyms</artifactId>
-        <scope>system</scope>
-        <systemPath>${basedir}/lib/hon-lucene-synonyms-${lucene.synonyms}.jar</systemPath>
-      </dependency>
+		<!-- ATG Dynamo Commerce Server -->
+		<dependency>
+			<groupId>atg</groupId>
+			<artifactId>dcs</artifactId>
+		</dependency>
 
-      <!-- provided -->
-      <dependency>
-        <groupId>commons-lang</groupId>
-        <artifactId>commons-lang</artifactId>
-        <scope>provided</scope>
-      </dependency>
+		<!-- ATG Publishing -->
+		<dependency>
+			<groupId>atg</groupId>
+			<artifactId>epub</artifactId>
+		</dependency>
 
-      <!-- Test depedencies -->
-      <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <scope>test</scope>
-      </dependency>
+		<dependency>
+			<groupId>org.opencommercesearch</groupId>
+			<artifactId>opencommercesearch-solr</artifactId>
+		</dependency>
 
-      <dependency>
-        <groupId>org.mockito</groupId>
-        <artifactId>mockito-core</artifactId>
-        <scope>test</scope>
-      </dependency>
+		<dependency>
+			<groupId>org.healthonnet.lucene</groupId>
+			<artifactId>hon-lucene-synonyms</artifactId>
+			<scope>system</scope>
+			<systemPath>${basedir}/lib/hon-lucene-synonyms-${lucene.synonyms}.jar</systemPath>
+		</dependency>
 
-      <dependency>
-        <groupId>org.powermock</groupId>
-        <artifactId>powermock-module-junit4</artifactId>
-        <scope>test</scope>
-      </dependency>
-      
-      <dependency>
-        <groupId>org.powermock</groupId>
-        <artifactId>powermock-api-mockito</artifactId>
-        <scope>test</scope>
-      </dependency>
+		<!-- provided -->
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<scope>provided</scope>
+		</dependency>
 
-      <dependency>
-        <groupId>org.powermock</groupId>
-        <artifactId>powermock-module-junit4-rule</artifactId>
-        <scope>test</scope>
-      </dependency>
+		<!-- Test depedencies -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
 
-      <dependency>
-        <groupId>org.powermock</groupId>
-        <artifactId>powermock-classloading-xstream</artifactId>
-        <scope>test</scope>
-      </dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
+		</dependency>
 
-      <dependency>
-        <groupId>org.hamcrest</groupId>
-        <artifactId>hamcrest-all</artifactId>
-        <scope>test</scope>
-      </dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4</artifactId>
+			<scope>test</scope>
+		</dependency>
 
-      <dependency>
-      	<groupId>log4j</groupId>
-      	<artifactId>log4j</artifactId>
-      	<scope>test</scope>
-      </dependency>
-      
-    </dependencies>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-api-mockito</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4-rule</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-classloading-xstream</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+	</dependencies>
 
 	<!-- ________________________________________________________________________________________ -->
 
 	<build>
 		<defaultGoal>package</defaultGoal>
-		
-        <resources>
-            <resource>
-                <directory>${basedir}/src/main/java</directory>
-            </resource>
-            <resource>
-                <directory>${basedir}/src/main/config</directory>
-                <includes>
-                    <include>**/*.xml</include>
-                    <include>**/*.properties</include>
-                    <include>**/*.txt</include>
-                    <include>**/*.html</include>
-                    <include>**/*.ram</include>
-                    <include>**/*.aff</include>
-                    <include>**/*.dic</include>
-                </includes>
-            </resource>
-        </resources>
-    
-        <testResources>
-            <testResource>
-              <directory>${basedir}/src/test/unit</directory>
-            </testResource>
-            <testResource>
-              <directory>${basedir}/src/test/integration</directory>
-            </testResource>
-            <testResource>
-              <directory>${basedir}/src/test/java</directory>
-            </testResource>
-            <testResource>
-              <directory>${basedir}/src/test/config</directory>
-              <includes>
-                  <include>**/*.xml</include>
-                  <include>**/*.properties</include>
-                  <include>**/*.txt</include>
-                  <include>**/*.html</include>
-                  <include>**/*.ram</include>
-              </includes>
-            </testResource>
-            <testResource>
-                <directory>${basedir}/testdata</directory>
-            </testResource>
-        </testResources>
 
-        <plugins>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-compiler-plugin</artifactId>
-              <version>2.5.1</version>
-              
-              <configuration>
-                <source>1.6</source>
-                <target>1.6</target>
-              </configuration>
-            </plugin>
+		<resources>
+			<resource>
+				<directory>${basedir}/src/main/java</directory>
+			</resource>
+			<resource>
+				<directory>${basedir}/src/main/config</directory>
+				<excludes>
+					<exclude>**/atg/**</exclude>
+					<exclude>**/org/**</exclude>				
+				</excludes>
+			</resource>
+		</resources>
 
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-surefire-plugin</artifactId>
-              <version>2.12.3</version>
-              
-              <dependencies>
-                <dependency>
-                  <groupId>org.apache.maven.surefire</groupId>
-                  <artifactId>surefire-junit47</artifactId>
-                  <version>2.12.3</version>
-                </dependency>
-              </dependencies>
-              
-              <configuration>
-                <parallel>methods</parallel>
-                <threadCount>10</threadCount>
-                <excludedGroups>org.opencommercesearch.IntegrationSearchTest</excludedGroups>
-              </configuration>
+		<testResources>
+			<testResource>
+				<directory>${basedir}/src/test/unit</directory>
+			</testResource>
+			<testResource>
+				<directory>${basedir}/src/test/integration</directory>
+			</testResource>
+			<testResource>
+				<directory>${basedir}/src/test/java</directory>
+			</testResource>
+			<testResource>
+				<directory>${basedir}/src/test/config</directory>
+				<includes>
+					<include>**/*.xml</include>
+					<include>**/*.properties</include>
+					<include>**/*.txt</include>
+					<include>**/*.html</include>
+					<include>**/*.ram</include>
+				</includes>
+			</testResource>
+			<testResource>
+				<directory>${basedir}/testdata</directory>
+			</testResource>
+		</testResources>
 
-            </plugin>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.5.1</version>
 
-            <plugin>
-              <artifactId>maven-failsafe-plugin</artifactId>
-              <version>2.12.3</version>
-              <dependencies>
-                <dependency>
-                  <groupId>org.apache.maven.surefire</groupId>
-                  <artifactId>surefire-junit47</artifactId>
-                  <version>2.12.3</version>
-                </dependency>
-              </dependencies>
-              <configuration>
-                <groups>org.opencommercesearch.IntegrationSearchTest</groups>
-                <argLine>-ea -Xms512M -Xmx512M</argLine>
-              </configuration>
-              <executions>
-                <execution>
-                  <goals>
-                    <goal>integration-test</goal>
-                  </goals>
-                  <configuration>
-                    <includes>
-                      <include>**/*.class</include>
-                    </includes>
-                  </configuration>
-                </execution>
-              </executions>
-            </plugin>
-          
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.4</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12.3</version>
+
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.maven.surefire</groupId>
+						<artifactId>surefire-junit47</artifactId>
+						<version>2.12.3</version>
+					</dependency>
+				</dependencies>
+
+				<configuration>
+					<parallel>methods</parallel>
+					<threadCount>10</threadCount>
+					<excludedGroups>org.opencommercesearch.IntegrationSearchTest</excludedGroups>
+				</configuration>
+
+			</plugin>
+
+			<plugin>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.12.3</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.maven.surefire</groupId>
+						<artifactId>surefire-junit47</artifactId>
+						<version>2.12.3</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<groups>org.opencommercesearch.IntegrationSearchTest</groups>
+					<argLine>-ea -Xms512M -Xmx512M</argLine>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+						</goals>
+						<configuration>
+							<includes>
+								<include>**/*.class</include>
+							</includes>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.4</version>
                 <configuration>
                     <includes>
                         <include>**/*.class</include>
@@ -252,53 +246,55 @@
                         <include>**/*.dic</include>
                     </includes>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${jacoco.version}</version>
-                <configuration>
-                    <propertyName>jacoco.agent.argLine</propertyName>
-                </configuration>
-                <executions>
-                    <execution>
-                    	<id>prepare-agent</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>report</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            
+			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-assembly-plugin</artifactId>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco.version}</version>
 				<configuration>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
-					<appendAssemblyId>false</appendAssemblyId>
+					<propertyName>jacoco.agent.argLine</propertyName>
 				</configuration>
 				<executions>
 					<execution>
-						<id>make-assembly</id>
+						<id>prepare-agent</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>configuration</id>
 						<phase>package</phase>
 						<goals>
 							<goal>single</goal>
 						</goals>
+						<configuration>
+							<descriptors>
+								<descriptor>src/main/assembly/config.xml</descriptor>
+							</descriptors>
+							<appendAssemblyId>false</appendAssemblyId>
+							<finalName>ocs-common-config</finalName>
+						</configuration>
 					</execution>
 				</executions>
-			</plugin>            
-        </plugins>
-            
-    </build>
-    
+			</plugin>
+
+		</plugins>
+
+	</build>
+
 </project>
