--- a/opencommercesearch-pub/pom.xml
+++ b/opencommercesearch-pub/pom.xml
@@ -108,25 +108,6 @@
 	<build>
 		<defaultGoal>package</defaultGoal>
 
-		<resources>
-			<resource>
-				<directory>${basedir}/src/main/java</directory>
-			</resource>
-			<resource>
-				<directory>${basedir}/config</directory>
-				<includes>
-					<include>**/*.xml</include>
-					<include>**/*.properties</include>
-				</includes>
-			</resource>
-		</resources>
-
-		<testResources>
-			<testResource>
-				<directory>${basedir}/src/test/java</directory>
-			</testResource>
-		</testResources>
-
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -142,13 +123,27 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.4</version>
-				<configuration>
-					<includes>
-						<include>**/*.class</include>
-						<include>**/*.xml</include>
-						<include>**/*.properties</include>
-					</includes>
-				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>configuration</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+						<configuration>
+							<descriptors>
+								<descriptor>src/main/assembly/config.xml</descriptor>
+							</descriptors>
+							<appendAssemblyId>false</appendAssemblyId>
+							<finalName>ocs-pub-config</finalName>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 
