--- a/opencommercesearch-common/src/main/config/org/opencommercesearch/deployment/IndexingDeploymentListener.properties
+++ b/opencommercesearch-common/src/main/config/org/opencommercesearch/deployment/IndexingDeploymentListener.properties
@@ -5,14 +5,4 @@ searchServer=/org/opencommercesearch/SearchServer
 enableEvaluation=false
 evaluationServiceSender=/org/opencommercesearch/deployment/EvaluationServiceSender
 triggerStatus=DEPLOYMENT_COMPLETE
-triggerItemDescriptorNames=/org/opencommercesearch/repository/SearchRepository:synonymList,\
-                           /org/opencommercesearch/repository/SearchRepository:synonym,\
-                           /org/opencommercesearch/repository/SearchRepository:rule,\
-                           /org/opencommercesearch/repository/SearchRepository:boostRule,\
-                           /org/opencommercesearch/repository/SearchRepository:blockRule,\
-                           /org/opencommercesearch/repository/SearchRepository:facetRule,\
-                           /org/opencommercesearch/repository/SearchRepository:redirectRule,\
-                           /org/opencommercesearch/repository/SearchRepository:rankingRule\
-
-
-
+triggerItemDescriptorNames=
