--- a/opencommercesearch-pub/config/org/opencommercesearch/repository/SearchRepository.properties
+++ b/opencommercesearch-pub/config/org/opencommercesearch/repository/SearchRepository.properties
@@ -3,3 +3,9 @@ $class=atg.adapter.version.VersionRepository
 versionManager=/atg/epub/version/VersionManagerService
 versionItemsByDefault=true
 dataSource=/atg/dynamo/service/jdbc/JTDataSource
+
+transactionManager=/atg/dynamo/transaction/TransactionManager
+repositoryName=SearchRepository
+definitionFiles=/org/opencommercesearch/repository/searchRepository.xml
+XMLToolsFactory=/atg/dynamo/service/xml/XMLToolsFactory
+idGenerator=/atg/dynamo/service/IdGenerator
