--- a/opencommercesearch-samplestore/pom.xml
+++ b/opencommercesearch-samplestore/pom.xml
@@ -28,6 +28,36 @@
 			<artifactId>opencommercesearch-common</artifactId>
 		</dependency>
 
+		<!-- ATG Dynamo Application Server -->
+		<dependency>
+			<groupId>atg</groupId>
+			<artifactId>das</artifactId>
+		</dependency>
+
+		<!-- ATG Dynamo Commerce Server -->
+		<dependency>
+			<groupId>atg</groupId>
+			<artifactId>dcs</artifactId>
+		</dependency>
+
+		<!-- ATG Publishing -->
+		<dependency>
+			<groupId>atg</groupId>
+			<artifactId>epub</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+		</dependency>
+			
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.4</version>
+			<scope>provided</scope>
+		</dependency>
+		
 		<!-- Test depedencies -->
 		<dependency>
 			<groupId>junit</groupId>
