--- a/opencommercesearch-solr/pom.xml
+++ b/opencommercesearch-solr/pom.xml
@@ -35,6 +35,11 @@
 			<version>${org.restlet.jee.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
 
 		<!-- Test depedencies -->
 		<dependency>
