--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,9 @@
 	<properties>
 		<opencommercesearch.version>0.2-SNAPSHOT</opencommercesearch.version>
 		<solr.version>4.2.1</solr.version>
-		<atg.version>10.1.2</atg.version>
+		<atg.version>10.2</atg.version>
 		<junit.version>4.11</junit.version>
+		<slf4j.version>1.6.4</slf4j.version>
 		<mockito.version>1.9.5</mockito.version>
 		<powermock.version>1.5</powermock.version>
 		<harmcrest.version>1.3</harmcrest.version>
@@ -72,7 +73,6 @@
 				<groupId>commons-lang</groupId>
 				<artifactId>commons-lang</artifactId>
 				<version>${commons.lang}</version>
-				<scope>provided</scope>
 			</dependency>
 
 			<!-- Solr -->
@@ -80,19 +80,31 @@
 				<groupId>org.apache.solr</groupId>
 				<artifactId>solr-solrj</artifactId>
 				<version>${solr.version}</version>
+				<exclusions>
+		        	<exclusion>
+		          		<groupId>org.slf4j</groupId>
+		          		<artifactId>slf4j-api</artifactId>
+		        	</exclusion>
+				</exclusions>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.solr</groupId>
 				<artifactId>solr-core</artifactId>
 				<version>${solr.version}</version>
-				<scope>provided</scope>
+				<exclusions>
+		        	<exclusion>
+		          		<groupId>org.slf4j</groupId>
+		          		<artifactId>slf4j-api</artifactId>
+		        	</exclusion>
+				</exclusions>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.solr</groupId>
 				<artifactId>solr-test-framework</artifactId>
 				<version>${solr.version}</version>
+				<scope>provided</scope>
 			</dependency>
 
 			<dependency>
@@ -106,6 +118,7 @@
 				<groupId>atg</groupId>
 				<artifactId>das</artifactId>
 				<version>${atg.version}</version>
+				<scope>provided</scope>
 			</dependency>
 
 			<!-- ATG Dynamo Commerce Server -->
@@ -113,6 +126,7 @@
 				<groupId>atg</groupId>
 				<artifactId>dcs</artifactId>
 				<version>${atg.version}</version>
+				<scope>provided</scope>
 			</dependency>
 
 			<!-- ATG Publishing -->
@@ -120,6 +134,7 @@
 				<groupId>atg</groupId>
 				<artifactId>epub</artifactId>
 				<version>${atg.version}</version>
+				<scope>provided</scope>
 			</dependency>
 
 			<!-- ATG Dynamo Personalization Server -->
@@ -127,6 +142,7 @@
 				<groupId>atg</groupId>
 				<artifactId>dps</artifactId>
 				<version>${atg.version}</version>
+				<scope>provided</scope>
 			</dependency>
 			
 			<!-- ATG BCC -->
@@ -134,6 +150,7 @@
 				<groupId>atg</groupId>
 				<artifactId>bcc</artifactId>
 				<version>${atg.version}</version>
+				<scope>provided</scope>
 			</dependency>
 			
 			<!-- ATG WebUI -->
@@ -141,8 +158,16 @@
 				<groupId>atg</groupId>
 				<artifactId>webui</artifactId>
 				<version>${atg.version}</version>
+				<scope>provided</scope>
 			</dependency>
-
+			
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>${slf4j.version}</version>
+				<scope>provided</scope>
+			</dependency>
+			
 			<!-- Test depedencies -->
 			<dependency>
 				<groupId>junit</groupId>
