Updated configs to be for indexing demo environment (no cs_rules, simplification of Solr configs)

--- a/opencommercesearch-samplestore/src/main/resources/config/production/org/opencommercesearch/sample/store/deployment/CatalogIndexingDeploymentListener.properties
+++ b/opencommercesearch-samplestore/src/main/resources/config/production/org/opencommercesearch/sample/store/deployment/CatalogIndexingDeploymentListener.properties
@@ -2,9 +2,11 @@ $class=org.opencommercesearch.sample.store.deployment.CatalogIndexingDeploymentL
 $scope=global
 
 triggerStatus=DEPLOYMENT_COMPLETE
-productRepositoryName=/atg/commerce/catalog/ProductCatalog_production
+productRepositoryName=/atg/commerce/catalog/ProductCatalog
 
 enableEvaluation=false
 evaluationServiceSender=/org/opencommercesearch/deployment/EvaluationServiceSender
 
 searchFeed=/org/opencommercesearch/sample/store/SampleStoreIndexer
+
+logging.loggingDebug=true
